src/objects/Maintenance_Mode_Config__mdt.object
<CustomObject>
    <fields>
        <fullName>Is_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Whether maintenance mode is turned on</description>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Maintenance_Message__c</fullName>
        <description>Messge to display to users about why page is not working</description>
        <label>Maintenance Message</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Page_API_Name__c</fullName>
        <description>Visualforce page api name where maintenance is occurring</description>
        <label>Page API Name</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Site Configurations</label>
    <listViews>
        <fullName>Detail</fullName>
        <columns>MasterLabel</columns>
        <columns>Is_Active__c</columns>
        <columns>Maintenance_Message__c</columns>
        <columns>Page_API_Name__c</columns>
        <filterScope>Everything</filterScope>
        <label>Detail</label>
    </listViews>
    <pluralLabel>Maintenance Mode Configs</pluralLabel>
</CustomObject>